<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.rapidoid</groupId>
		<artifactId>rapidoid</artifactId>
		<version>5.5.5-L</version>
	</parent>

	<artifactId>rapidoid-integration-tests</artifactId>
	<packaging>jar</packaging>
	<description>Rapidoid Integration Tests</description>

	<properties>
		<java.version>1.8</java.version>
		<tests.exclude>org.rapidoid.docs.**</tests.exclude>
	</properties>

	<dependencies>

		<!-- TEST -->
		<dependency>
			<groupId>org.rapidoid</groupId>
			<artifactId>rapidoid-http-server</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.rapidoid</groupId>
			<artifactId>rapidoid-http-client</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.rapidoid</groupId>
			<artifactId>rapidoid-test-commons</artifactId>
			<version>${project.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>jakarta.annotation</groupId>
			<artifactId>jakarta.annotation-api</artifactId>
			<version>1.3.5</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<profiles>
		<profile>
			<id>docs</id>
			<properties>
				<tests.exclude />
			</properties>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<configuration>
					<skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<forkCount>1</forkCount>
					<reuseForks>false</reuseForks>
					<argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
					<excludes>
						<exclude>${tests.exclude}</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>